--- a/src/views/bailPolicyForm.ejs
+++ b/src/views/bailPolicyForm.ejs
@@ -151,13 +151,6 @@
                                                 <div class="col-sm-9">
                                                     <select class="form-control" name="tipo_ramo_poliza">
                                                         <option value="">Seleccione</option>
-                                                        <option value="TRI">TRI</option>
-                                                        <option value="RCG">RCG</option>
-                                                        <option value="FIDELIDAD DE EMPLEADOS">FIDELIDAD DE EMPLEADOS</option>
-                                                        <option value="INCENDIO">INCENDIO</option>
-                                                        <option value="RIESGOS DIVERSOS">RIESGOS DIVERSOS</option>
-                                                        <option value="COMBINADO EMPRESARIAL">COMBINADO EMPRESARIAL</option>
-                                                        <option value="COMBINADO RESIDENCIAL">COMBINADO RESIDENCIAL</option>
                                                         <option value="FIANZA LABORAL">FIANZA LABORAL</option>
                                                         <option value="FIANZA DE FIEL CUMPLIMIENTO">FIANZA DE FIEL CUMPLIMIENTO</option>
                                                         <option value="FIANZA DE ANTICIPO">FIANZA DE ANTICIPO</option>
@@ -342,6 +335,7 @@
                                                         <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculationDate()">
                                                             <option value="">Seleccione</option>
                                                             <option value="MENSUAL">MENSUAL</option>
+                                                            <option value="BIMESTRAL">BIMESTRAL</option>
                                                             <option value="TRIMESTRAL">TRIMESTRAL</option>
                                                             <option value="SEMESTRAL">SEMESTRAL</option>
                                                             <option value="ANUAL">ANUAL</option>
@@ -382,7 +376,7 @@
                                                             type="text" 
                                                             name="monto_prima_recibo"
                                                             id="monto_prima_recibo"
-                                                            value="<%= policy.prima_anual_poliza %>" 
+                                                            value="<%= primaPoliza %>" 
                                                             class="form-control number_format"
                                                             required
                                                         >
@@ -494,12 +488,11 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Agente Propio</label>
                                                     <div class="col-sm-9">
                                                         <input 
-                                                            type="number"
-                                                            step="0.01" 
+                                                            type="text"
                                                             name="porcentaje_agente_comision"
                                                             id="porcentaje_agente_comision"
-                                                            value="<%= ownAgent.porcentaje_agente_propio %>"
-                                                            class="form-control"
+                                                            value="<%= porcentajeAgentePropio %>"
+                                                            class="form-control number_format"
                                                             required
                                                         >
                                                     </div>
@@ -536,7 +529,7 @@
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivo</label>
                                                 <div class="col-sm-9">
                                                     <input 
-                                                        type="text" 
+                                                        type="text"
                                                         name="porcentaje_ejecutivo_suscripcion"
                                                         id="porcentaje_ejecutivo_suscripcion"
                                                         placeholder="Porcentaje Ejecutivo de Suscripción *" 
@@ -564,7 +557,7 @@
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Fundatina</label>
                                                 <div class="col-sm-9">
                                                     <input 
-                                                        type="text" 
+                                                        type="text"
                                                         name="porcentaje_fundatina_comision"
                                                         id="porcentaje_fundatina_comision"
                                                         value="0,35" 
@@ -580,7 +573,7 @@
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Operativa Director</label>
                                                 <div class="col-sm-9">
                                                     <input 
-                                                        type="text" 
+                                                        type="text"
                                                         name="porcentaje_director_comision"
                                                         id="porcentaje_director_comision"
                                                         value="2,5" 
@@ -594,7 +587,7 @@
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Operativa Socio</label>
                                                 <div class="col-sm-9">
                                                     <input 
-                                                        type="text" 
+                                                        type="text"
                                                         name="porcentaje_socio_comision"
                                                         id="porcentaje_socio_comision"
                                                         value="2,5" 
@@ -637,12 +630,11 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión Asociada</label>
                                                     <div class="col-sm-9">
                                                         <input 
-                                                            type="number"
-                                                            step="0.01" 
+                                                            type="text"
                                                             name="monto_comision_comision"
                                                             id="monto_comision_comision"
-                                                            value="<%= receipt.monto_comision_recibo %>" 
-                                                            class="form-control"
+                                                            value="<%= comisionRecibo %>" 
+                                                            class="form-control number_format"
                                                             required
                                                         >
                                                     </div>
@@ -678,12 +670,11 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">% Prima</label>
                                                     <div class="col-sm-9">
                                                         <input 
-                                                            type="number"
-                                                            step="0.01" 
+                                                            type="text"
                                                             name="porcentaje_prima_factor_verificacion"
                                                             id="porcentaje_prima_factor_verificacion"
-                                                            value="<%= policy.prima_anual_poliza %>" 
-                                                            class="form-control"
+                                                            value="<%= primaPoliza %>" 
+                                                            class="form-control number_format"
                                                         >
                                                     </div>
                                                 </div>
@@ -693,12 +684,11 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">% Prima</label>
                                                     <div class="col-sm-9">
                                                         <input 
-                                                            type="number"
-                                                            step="0.01" 
+                                                            type="text"
                                                             name="porcentaje_prima_factor_verificacion"
                                                             id="porcentaje_prima_factor_verificacion"
                                                             placeholder="Porcentaje en dólares por prima *" 
-                                                            class="form-control"
+                                                            class="form-control number_format"
                                                         >
                                                     </div>
                                                 </div>
