--- a/src/views/funeralPolicyForm.ejs
+++ b/src/views/funeralPolicyForm.ejs
@@ -355,7 +355,6 @@
                                         </div>
                                     </div>
                                 </div>
-                                <label class="col-sm-12 col-form-label"><h3>Nota: Para guardar varios beneficiarios escriba uno por uno el beneficiario en el formulario y haga click en el botón de Guardar, En el caso de que guarde el último beneficiario haga click en el botón siguiente</h3></label>
                                 <div class="form-group row">
                                     <div class="col-sm-12 col-sm-offset-2">
                                         <div class="card-body d-flex">
@@ -442,6 +441,7 @@
                                                         <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculationDate()">
                                                             <option value="">Seleccione</option>
                                                             <option value="MENSUAL">MENSUAL</option>
+                                                            <option value="BIMESTRAL">BIMESTRAL</option>
                                                             <option value="TRIMESTRAL">TRIMESTRAL</option>
                                                             <option value="SEMESTRAL">SEMESTRAL</option>
                                                             <option value="ANUAL">ANUAL</option>
@@ -482,7 +482,7 @@
                                                             type="text" 
                                                             name="monto_prima_recibo"
                                                             id="monto_prima_recibo"
-                                                            value="<%= policy.prima_anual_poliza %>" 
+                                                            value="<%= primaPoliza %>" 
                                                             class="form-control number_format"
                                                             required
                                                         >
@@ -594,12 +594,11 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Agente Propio</label>
                                                     <div class="col-sm-9">
                                                         <input 
-                                                            type="number"
-                                                            step="0.01" 
+                                                            type="text"
                                                             name="porcentaje_agente_comision"
                                                             id="porcentaje_agente_comision"
-                                                            value="<%= ownAgent.porcentaje_agente_propio %>"
-                                                            class="form-control"
+                                                            value="<%= porcentajeAgentePropio %>"
+                                                            class="form-control number_format"
                                                             required
                                                         >
                                                     </div>
@@ -636,7 +635,7 @@
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Ejecutivo</label>
                                                 <div class="col-sm-9">
                                                     <input 
-                                                        type="text" 
+                                                        type="text"
                                                         name="porcentaje_ejecutivo_suscripcion"
                                                         id="porcentaje_ejecutivo_suscripcion"
                                                         placeholder="Porcentaje Ejecutivo de Suscripción *" 
@@ -664,7 +663,7 @@
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Fundatina</label>
                                                 <div class="col-sm-9">
                                                     <input 
-                                                        type="text" 
+                                                        type="text"
                                                         name="porcentaje_fundatina_comision"
                                                         id="porcentaje_fundatina_comision"
                                                         value="0,35" 
@@ -680,7 +679,7 @@
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Operativa Director</label>
                                                 <div class="col-sm-9">
                                                     <input 
-                                                        type="text" 
+                                                        type="text"
                                                         name="porcentaje_director_comision"
                                                         id="porcentaje_director_comision"
                                                         value="2,5" 
@@ -694,7 +693,7 @@
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Operativa Socio</label>
                                                 <div class="col-sm-9">
                                                     <input 
-                                                        type="text" 
+                                                        type="text"
                                                         name="porcentaje_socio_comision"
                                                         id="porcentaje_socio_comision"
                                                         value="2,5" 
@@ -737,12 +736,11 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión Asociada</label>
                                                     <div class="col-sm-9">
                                                         <input 
-                                                            type="number"
-                                                            step="0.01" 
+                                                            type="text"
                                                             name="monto_comision_comision"
                                                             id="monto_comision_comision"
-                                                            value="<%= receipt.monto_comision_recibo %>" 
-                                                            class="form-control"
+                                                            value="<%= comisionRecibo %>" 
+                                                            class="form-control number_format"
                                                             required
                                                         >
                                                     </div>
@@ -778,12 +776,11 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">% Prima</label>
                                                     <div class="col-sm-9">
                                                         <input 
-                                                            type="number"
-                                                            step="0.01" 
+                                                            type="text"
                                                             name="porcentaje_prima_factor_verificacion"
                                                             id="porcentaje_prima_factor_verificacion"
-                                                            value="<%= policy.prima_anual_poliza %>" 
-                                                            class="form-control"
+                                                            value="<%= primaPoliza %>" 
+                                                            class="form-control number_format"
                                                         >
                                                     </div>
                                                 </div>
@@ -793,12 +790,11 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">% Prima</label>
                                                     <div class="col-sm-9">
                                                         <input 
-                                                            type="number"
-                                                            step="0.01" 
+                                                            type="text"
                                                             name="porcentaje_prima_factor_verificacion"
                                                             id="porcentaje_prima_factor_verificacion"
                                                             placeholder="Porcentaje en dólares por prima *" 
-                                                            class="form-control"
+                                                            class="form-control number_format"
                                                         >
                                                     </div>
                                                 </div>
