--- a/src/views/layouts/footerReceipt.ejs
+++ b/src/views/layouts/footerReceipt.ejs
@@ -121,7 +121,32 @@
                 }
                 var premiumMonthly = receipt.monto_prima_recibo / numberMonthly;
                 premiumMonthly = premiumMonthly.toFixed(2);
+                premiumMonthly = premiumMonthly.toString().replace('.', ',').replace(/(\d)(?=(\d{3})+(?!\d))/g,'$1.');
                 document.getElementById("monto_prima_recibo").value = premiumMonthly;
+            } else if (getSelectValue === 'BIMESTRAL') {
+                $(document).ready(function () {
+                    $('#tipo_fraccionamiento_recibo').change(function () {
+                        var extraer = $('#fecha_desde_recibo').val();
+                        var fecha = new Date(extraer);
+                        fecha.setMonth(fecha.getMonth() + 2);
+                        fecha = fecha.toISOString().substring(0, 10);
+                        $('#fecha_pago_recibo').val(fecha);
+                    });
+                });
+                $(document).ready(function () {
+                    $('#fecha_desde_recibo').change(function () {
+                        var extraer = $('#fecha_desde_recibo').val();
+                        var fecha = new Date(extraer);
+                        fecha.setMonth(fecha.getMonth() + 2);
+                        fecha = fecha.toISOString().substring(0, 10);
+                        $('#fecha_hasta_recibo').val(fecha);
+                    });
+                });
+                var premiumBimonthly = receipt.monto_prima_recibo / 6;
+                premiumBimonthly = premiumBimonthly.toFixed(2);
+                premiumBimonthly = premiumBimonthly.toString().replace('.', ',').replace(/(\d)(?=(\d{3})+(?!\d))/g,'$1.');
+                document.getElementById("monto_prima_recibo").value = premiumBimonthly;
+                document.getElementById("numero_pago_recibo").value = 6;
             } else if (getSelectValue === 'TRIMESTRAL') {
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
@@ -143,6 +168,7 @@
                 });
                 var premiumQuarterly = receipt.monto_prima_recibo / 4;
                 premiumQuarterly = premiumQuarterly.toFixed(2);
+                premiumQuarterly = premiumQuarterly.toString().replace('.', ',').replace(/(\d)(?=(\d{3})+(?!\d))/g,'$1.');
                 document.getElementById("monto_prima_recibo").value = premiumQuarterly;
                 document.getElementById("numero_pago_recibo").value = 4;
             } else if (getSelectValue === 'SEMESTRAL') {
@@ -166,6 +192,7 @@
                 });
                 var premiumBiannual = receipt.monto_prima_recibo / 2;
                 premiumBiannual = premiumBiannual.toFixed(2);
+                premiumBiannual = premiumBiannual.toString().replace('.', ',').replace(/(\d)(?=(\d{3})+(?!\d))/g,'$1.');
                 document.getElementById("monto_prima_recibo").value = premiumBiannual;
                 document.getElementById("numero_pago_recibo").value = 2;
             }  else if (getSelectValue === 'ANUAL') {
@@ -189,6 +216,7 @@
                 });
                 var annualPremium = receipt.monto_prima_recibo / 1;
                 annualPremium = annualPremium.toFixed(2);
+                annualPremium = annualPremium.toString().replace('.', ',').replace(/(\d)(?=(\d{3})+(?!\d))/g,'$1.');
                 document.getElementById("monto_prima_recibo").value = annualPremium;
                 document.getElementById("numero_pago_recibo").value = 1;
             }
@@ -227,6 +255,26 @@
                     });
                 });
                 document.getElementById("numero_pago_recibo").setAttribute("value", '');
+            } else if (getSelectValue === 'BIMESTRAL') {
+                $(document).ready(function () {
+                    $('#tipo_fraccionamiento_recibo').change(function () {
+                        var extraer = $('#fecha_desde_recibo').val();
+                        var fecha = new Date(extraer);
+                        fecha.setMonth(fecha.getMonth() + 2);
+                        fecha = fecha.toISOString().substring(0, 10);
+                        $('#fecha_pago_recibo').val(fecha);
+                    });
+                });
+                $(document).ready(function () {
+                    $('#fecha_desde_recibo').change(function () {
+                        var extraer = $('#fecha_desde_recibo').val();
+                        var fecha = new Date(extraer);
+                        fecha.setMonth(fecha.getMonth() + 2);
+                        fecha = fecha.toISOString().substring(0, 10);
+                        $('#fecha_hasta_recibo').val(fecha);
+                    });
+                });
+                document.getElementById("numero_pago_recibo").value = 6;
             } else if (getSelectValue === 'TRIMESTRAL') {
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
