--- a/src/views/receiptForm.ejs
+++ b/src/views/receiptForm.ejs
@@ -100,6 +100,7 @@
                                                 <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculationDate()">
                                                     <option value="">Seleccione</option>
                                                     <option value="MENSUAL">MENSUAL</option>
+                                                    <option value="BIMESTRAL">BIMESTRAL</option>
                                                     <option value="TRIMESTRAL">TRIMESTRAL</option>
                                                     <option value="SEMESTRAL">SEMESTRAL</option>
                                                     <option value="ANUAL">ANUAL</option>
@@ -207,12 +208,11 @@
                                         <div class="form-group row"><label class="col-sm-3 col-form-label">Número de Pagos</label>
                                             <div class="col-sm-9">
                                                 <input 
-                                                    type="number"
-                                                    step="0.01" 
+                                                    type="text"
                                                     name="numero_pago_recibo"
                                                     id="numero_pago_recibo"
-                                                    value="0" 
-                                                    class="form-control"
+                                                    value="0"
+                                                    class="form-control number_format"
                                                     onchange="premiumCalculationDate()"
                                                 >
                                             </div>
