--- a/src/views/vehiclePolicyForm.ejs
+++ b/src/views/vehiclePolicyForm.ejs
@@ -470,6 +470,8 @@
                                                         <option value="AUTOMÓVIL">AUTOMÓVIL</option>
                                                         <option value="CAMIÓN">CAMIÓN</option>
                                                         <option value="AUTOBÚS">AUTOBÚS</option>
+                                                        <option value="PICKUP">PICKUP</option>
+                                                        <option value="RÚSTICO">RÚSTICO</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -587,6 +589,7 @@
                                                         <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculationDate()">
                                                             <option value="">Seleccione</option>
                                                             <option value="MENSUAL">MENSUAL</option>
+                                                            <option value="BIMESTRAL">BIMESTRAL</option>
                                                             <option value="TRIMESTRAL">TRIMESTRAL</option>
                                                             <option value="SEMESTRAL">SEMESTRAL</option>
                                                             <option value="ANUAL">ANUAL</option>
@@ -627,7 +630,7 @@
                                                             type="text" 
                                                             name="monto_prima_recibo"
                                                             id="monto_prima_recibo"
-                                                            value="<%= policy.prima_anual_poliza %>" 
+                                                            value="<%= primaPoliza %>" 
                                                             class="form-control number_format"
                                                             required
                                                         >
@@ -739,12 +742,11 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Agente Propio</label>
                                                     <div class="col-sm-9">
                                                         <input 
-                                                            type="number"
-                                                            step="0.01" 
+                                                            type="text"
                                                             name="porcentaje_agente_comision"
                                                             id="porcentaje_agente_comision"
-                                                            value="<%= ownAgent.porcentaje_agente_propio %>"
-                                                            class="form-control"
+                                                            value="<%= porcentajeAgentePropio %>"
+                                                            class="form-control number_format"
                                                             required
                                                         >
                                                     </div>
@@ -882,12 +884,11 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión Asociada</label>
                                                     <div class="col-sm-9">
                                                         <input 
-                                                            type="number"
-                                                            step="0.01" 
+                                                            type="text" 
                                                             name="monto_comision_comision"
                                                             id="monto_comision_comision"
-                                                            value="<%= receipt.monto_comision_recibo %>" 
-                                                            class="form-control"
+                                                            value="<%= comisionRecibo %>" 
+                                                            class="form-control number_format"
                                                             required
                                                         >
                                                     </div>
@@ -923,12 +924,11 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">% Prima</label>
                                                     <div class="col-sm-9">
                                                         <input 
-                                                            type="number"
-                                                            step="0.01" 
+                                                            type="text"
                                                             name="porcentaje_prima_factor_verificacion"
                                                             id="porcentaje_prima_factor_verificacion"
-                                                            value="<%= policy.prima_anual_poliza %>" 
-                                                            class="form-control"
+                                                            value="<%= primaPoliza %>" 
+                                                            class="form-control number_format"
                                                         >
                                                     </div>
                                                 </div>
@@ -938,12 +938,11 @@
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">% Prima</label>
                                                     <div class="col-sm-9">
                                                         <input 
-                                                            type="number"
-                                                            step="0.01" 
+                                                            type="text"
                                                             name="porcentaje_prima_factor_verificacion"
                                                             id="porcentaje_prima_factor_verificacion"
                                                             placeholder="Porcentaje en dólares por prima *" 
-                                                            class="form-control"
+                                                            class="form-control number_format"
                                                         >
                                                     </div>
                                                 </div>
